2009-03-10  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.4.txt: Added file for new release

	* src/tls/tls_drv.c: Fix encryption problem for ejabberd_http
	after timeout (thanks to Alexey Shchepin)(EJAB-880)

2009-03-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix PEP with other domains and s2s
	(EJAB-825). Also fixes send last published items in subscription.

2009-03-09  Badlop  <badlop@process-one.net>

	* src/tls/tls_drv.c: Fix to support OpenSSL older than
	0.9.8f (EJAB-877)(thanks to Jonathan Schleifer)
	* doc/guide.tex: It is again supported OpenSSL older than 0.9.8f
	* doc/guide.html: Likewise

	* src/mod_proxy65/mod_proxy65_service.erl: if an ip option is not
	defined, the module takes an IP address of a local
	hostname (thanks to Evgeniy Khramtsov)

2009-03-07  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Enforce privacy rules also for
	subscription requests (EJAB-300)
	* src/ejabberd_sm.erl: Likewise

2009-03-06  Badlop  <badlop@process-one.net>

	* src/eldap/eldap.erl: moves waiting for response queries to
	pending queue on an LDAP connection failure (thanks to Evgeniy
	Khramtsov)

	* src/eldap/eldap.erl: implemented queue for pending
	queries (thanks to Evgeniy Khramtsov)

	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
	Evgeniy Khramtsov)

	* src/eldap/Makefile.in: added +optimize and +driver compilation
	options (thanks to Evgeniy Khramtsov)
	* src/eldap/Makefile.win32: Likewise

2009-03-05  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: In a Windows machine, explicitly add the
	nameservers, as it seems Erlang does not do itself (EJAB-860)
	* src/win32_dns.erl: Get name servers from Windows registy (thanks
	to Geoff Cant)

	* doc/guide.tex: Require OpenSSL 0.9.8f or higher (EJAB-877)
	* doc/guide.html: Likewise

2009-03-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: If anonymous auth is enabled, when