@@ -1091,21 +1091,16 @@ handle_info({route, From, To, Packet}, StateName, StateData) ->
 			Attrs1 = lists:keydelete("type", 1, Attrs),
 			{true, [{"type", "unavailable"} | Attrs1], StateData};
 		    "subscribe" ->
-			Reason = xml:get_path_s(Packet,[{elem,"status"},cdata]),
-			SRes = check_privacy_subs(in, subscribe, From, To,
-						  Packet, Reason, StateData),
+			SRes = is_privacy_allow(From, To, Packet, StateData#state.privacy_list),
 			{SRes, Attrs, StateData};
 		    "subscribed" ->
-			SRes = check_privacy_subs(in, subscribed, From, To,
-						  Packet, "", StateData),
+			SRes = is_privacy_allow(From, To, Packet, StateData#state.privacy_list),
 			{SRes, Attrs, StateData};
 		    "unsubscribe" ->
-			SRes = check_privacy_subs(in, unsubscribe, From, To,
-						  Packet, "", StateData),
+			SRes = is_privacy_allow(From, To, Packet, StateData#state.privacy_list),
 			{SRes, Attrs, StateData};
 		    "unsubscribed" ->
-			SRes = check_privacy_subs(in, unsubscribed, From, To,
-						  Packet, "", StateData),
+			SRes = is_privacy_allow(From, To, Packet, StateData#state.privacy_list),
 			{SRes, Attrs, StateData};
 		    _ ->
 			case ejabberd_hooks:run_fold(
@@ -1628,35 +1623,18 @@ presence_track(From, To, Packet, StateData) ->
 			    pres_a = A}
     end.
 
-%% Check privacy rules for subscription requests and call the roster storage
-check_privacy_subs(Dir, Type, From, To, Packet, Reason, StateData) ->
-    case is_privacy_allow(From, To, Dir, Packet, StateData) of
-	true ->
-	    ejabberd_hooks:run_fold(
-	      roster_in_subscription,
-	      To#jid.lserver,
-	      false,
-	      [To#jid.user, To#jid.server, From, Type, Reason]),
-	    true;
-	false ->
-	    false
-    end.
-
-%% Check if privacy rules allow this delivery, then push to roster
-is_privacy_allow(From, To, Dir, Packet, StateData) ->
-    case ejabberd_hooks:run_fold(
-	   privacy_check_packet, StateData#state.server,
-	   allow,
-	   [StateData#state.user,
-	    StateData#state.server,
-	    StateData#state.privacy_list,
-	    {From, To, Packet},
-	    Dir]) of
-	deny ->
-	    false;
-	allow ->
-	    true
-    end.
+%% Check if privacy rules allow this delivery
+is_privacy_allow(From, To, Packet, PrivacyList) ->
+    User = To#jid.user,
+    Server = To#jid.server,
+    allow == ejabberd_hooks:run_fold(
+	       privacy_check_packet, Server,
+	       allow,
+	       [User,
+		Server,
+		PrivacyList,
+		{From, To, Packet},
+		in]).
 
 presence_broadcast(StateData, From, JIDSet, Packet) ->
     lists:foreach(fun(JID) ->
