@@ -1,3 +1,11 @@
+2009-03-24  Badlop  <badlop@process-one.net>
+
+	* src/ejabberd_sm.erl: Partially retract SVN r1976
+	EJAB-300 (EJAB-890). Check default privacy list when account, not
+	a specific session, receives a presence subscription
+	stanza (EJAB-300).
+	* src/ejabberd_c2s.erl: Likewise
+
 2009-03-10  Badlop  <badlop@process-one.net>
 
 	* doc/release_notes_2.0.4.txt: Added file for new release
